--- a/feature-score/src/main/res/values/strings.xml
+++ b/feature-score/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="score">Score</string>
+    <string name="start_match">Start match</string>
 </resources>
