--- a/feature-settings/src/main/res/values/strings.xml
+++ b/feature-settings/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="settings">Settings</string>
+    <string name="sport">Sport</string>
+    <string name="teams">Teams</string>
 </resources>
