--- a/feature-games/src/main/res/values/strings.xml
+++ b/feature-games/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="games">Games</string>
     <string name="no_saved_games_yet">You have no saved games yet</string>
+    <string name="in_progress">In progress</string>
 </resources>
